2009-08-11  Jérémie Laval  <jeremie.laval@gmail.com>

	* System.dll.sources: Adding ParallelFx files.
	* System_test.dll.sources: Adding ParallelFx test files.

2009-07-26  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile ($(build_lib)): Make CYCLIC_DEP_FILES depend on this.

2009-07-22  Jb Evain  <jbevain@novell.com>

	* monotouch_System.dll.sources: bring Process in.

2009-06-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added IPv6MulticastOptionTest.cs and
	MulticastOptionTest.cs.

2009-05-14  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Distribute Test/test-config-file-net-2.0.

2009-05-13  Jonathan Pryor <jpryor@novell.com>

	* System_test.dll.sources: Add ListChangedEventArgsTest.cs.

2009-05-13  Jonathan Pryor <jpryor@novell.com>

	* Makefile: $(test_lib).config needs to be profile-specific.

2009-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.dll.sources: Remove some unneeded files.

2009-04-21  Sebastien Pouliot  <sebastien@ximian.com>

	* System_test.dll.sources: Add EndPointTest.cs

2009-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.dll.sources: Remove corlib's files since System
	can now access, for 2.1 (moonlight) corlib's internals.

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* System.dll.sources: Add System.Net.Sockets/Socket_2_1.cs

2009-01-07  Sebastien Pouliot  <sebastien@ximian.com>

	* net_2_1_raw_System.dll.sources: Add System/UriTypeConverter.cs to
	NET_2_1 build.

2009-01-07  Geoff Norton  <gnorton@novell.com>

	* Makefile: Respect platform specific test harness exclusions.

2008-12-25   Leszek Ciesielski <skolima@gmail.com>

	* System.Diagnostics/Process.cs: Raise the
	Process.OutputDataReceived and Process.ErrorDataReceived with null
	arguments at the end.   This is the documented behavior:

	http://msdn.microsoft.com/en-us/library/system.diagnostics.datareceivedeventargs.data.aspx
